# kw2graph

./: .gitignore  docker-compose.yml
api/: Pipfile  pyproject.toml
api/kw2graph/: __init__.py  config.py  main.py
api/kw2graph/domain/: base.py  contents_fetcher.py  graph_creator.py  graph_fetcher.py  keywords_analyzer.py
api/kw2graph/infrastructure/: base.py  elasticsearch.py  graphdb.py  gremlin_manager.py  openai.py
api/kw2graph/usecase/: analyze.py  analyze_keywords.py  base.py  candidate.py  create_graph.py  get_candidate.py  show_graph.py  submit_graph_analysis.py  submit_task.py
api/kw2graph/usecase/input/: analyze.py  base.py  candidate.py  create_graph.py  show_graph.py  submit_task.py
api/kw2graph/usecase/output/: analyze.py  analyze_keywords.py  base.py  candidate.py  create_graph.py  show_graph.py  submit_task.py
api/kw2graph/util/: text_formatter.py
api/tools/: create-candidate.sh
app/: package-lock.json  package.json
app/src/app/: page.tsx
