[project]
name = "kw2graph"
version = "0.1.0"
description = "Keyword to Graph DB prototype"
authors = [
    {name = "otajisan",email = "mtaji@morningcode.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.8.1,<3.0.0)",
    "elasticsearch (>=9.2.0,<10.0.0)",
    "gremlinpython (>=3.8.0,<4.0.0)",
    "fastapi (>=0.123.0,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
